2003-10-06  Don Porter  <dgp@users.sourceforge.net>

        * tests/fCmd.test (fCmd-8.2):   Test only that tilde-substitution
        happens, not for any particular result. [Bug 685991]

	* unix/tcl.m4 (SC_PATH_TCLCONFIG):	Corrected search path so
	that alpha and beta releases of Tcl are not favored. [Bug 608698]

	* tests/reg.test:	Corrected duplicate test names.
	* tests/resource.test:	[Bugs 710370, 710358]

	* tests/cmdMZ.test:	Updated [package require tcltest] lines to
	* tests/fileSystem.test:	indiciate that these test files
	* tests/notify.test:	use features of tcltest 2.  [Bug 706114]
	* tests/parseExpr.test:
	* tests/unixNotfy.test:

2003-10-06  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclFileName.c:
	* generic/tclIOUtil.c: backport of volumerelative file normalization
	and 'file join' inconsistency fixes [Bug 767834, 813273].

2003-10-04  Chengye Mao <chengye.geo@yahoo.com>

	* win/tclWinPipe.c: fixed a bug in BuildCommandLine.
	This bug built a command line with a missing space between
	tclpipe.dll and the following arguments.  It caused error
	in Windows 98 when exec command.com (e.g. dir) [Bug 789040]

2003-10-03  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c:	Fixed error in ref count management of command
	* generic/tclCmdMZ.c:	and execution traces that caused access to
	freed memory in trace-32.1.  [Bug 811483].

2003-10-03  Vince Darley  <vincentdarley@users.sourceforge.net>

	* tests/fileName.test:
	* tests/winFCmd.test:
        * doc/FileSystem.3: backported various test and documentation
        changes from HEAD.  Backport of actual code fixes to follow.

2003-10-02  Don Porter  <dgp@users.sourceforge.net>

	* README:		Bumped patch level to 8.4.5 to prepare
	* generic/tcl.h:	for next patch release.
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/README.binary:
	* win/configure.in:

	* unix/configure:	autoconf (2.13)
	* win/configure:	

	* library/http/http.tcl:	Bumped to http 2.4.5